DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
Mar-01-2005 patrickh    Added an overload of
                        org.vrjuggler.jccl.config.ConfigElement.setName() that
                        supports undoing the name change operation.
                        NEW VERSION: 0.92.6
Feb-22-2005 patrickh    Extended org.vrjuggler.jccl.config.ConfigBroker to
                        include overloads of add() and remove() for new
                        ConfigElement objects that allow the caller to provide
                        the data source to which the element will be added.
                        NEW VERSION: 0.92.5
Feb-17-2005 patrickh    Allow org.vrjuggler.jccl.config.ConfigElementPointer
                        references to be passed as the property value for
                        org.vrjuggler.jccl.config.ConfigElement.setProperty().
                        NEW VERSION: 0.92.4
Feb-15-2005 patrickh    Extended org.vrjuggler.jccl.config.ConfigUndoManager to
                        provide automatmed multiple undo/redo operations.
                        NEW VERSION: 0.92.3
Feb-06-2005 patrickh    Custom editors of config elements can now provide a
                        means to respond to help requests raised by a user
                        clicking on a button.
                        NEW VERSION: 0.92.2
Feb-03-2005 patrickh    Use $JCCL_DEFINITION_PATH to augment the .jdef search
                        path rather than having it override the default search
                        path.
                        NEW VERSION: 0.92.1

[1.0 Beta 2 released - 1.18.2005]==============================================
Jan-18-2005 patrickh    NEW VERSION: 0.92.0
Jan-09-2005 patrickh    Merged the methods setContext() and setConfigElement()
                        in org.vrjuggler.jccl.editors.CustomEditor into the
                        single method setConfig().